[package]
name = "forge"
version = "0.1.1"
edition = "2021"
authors = ["Vlad&Tux"]
description = "A powerful wrapper for Cargo to automate post-build tasks and workflows"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
colored = "2.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
cargo_toml = "0.19"
git2 = "0.18"
futures = "0.3" 
indicatif = "0.18.4"
hex = "0.4.3"
sha2 = "0.11.0"
walkdir = "2.5.0"
